src/tests/snapshots/nyx__tests__window_opening__check_target_size@dwP0.25-dhU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n}"
expression: snapshot
---
initial configure:
size: 320 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 320 × 0, bounds: 1280 × 720, states: []
size: 320 × 0, bounds: 1280 × 720, states: [Activated]
